<resources>
    <string name="app_name">Alpha</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash_screen">Gestor de Proyectos Alpha</string>

    <string name="action_cancelar">Cancelar</string>
    <string name="prompt_username">Usuario</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar session</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_create_account">Crear una cuenta</string>

    <!-- Registro de usuario -->
    <string name="action_registrar_usuario">Registrar</string>
    <string name="prompt_nombre">Nombre</string>
    <string name="prompt_apellido">Apellido</string>
    <string name="prompt_alias">Alias</string>
    <string name="prompt_sexo">Sexo</string>
    <string name="prompt_confirmar_password">Confirmar Password</string>

    <string name="action_agregar">Agregar</string>
    <string name="action_eliminar">Eliminar</string>

    <string name="action_guardar">Guardar</string>

    <string name="prompt_descripcion">Descripción</string>
    <string name="prompt_fecha_creacion">Fecha de Creación</string>
    <string name="prompt_estado">Estado</string>
    <string name="prompt_categoria">Categoria</string>
    <string name="prompt_propietario">Propietario</string>

    <string name="prompt_fecha_inicio_estimada">Fecha estimada de inicio</string>
    <string name="prompt_fecha_fin_estimada">Fecha estimada de finalización</string>
    <string name="title_activity_editar_proyecto">Editar Proyecto</string>
    <string name="title_activity_editar_tarea">Editar Tarea</string>
    <string name="prompt_fecha_inicio">Fecha de inicio</string>
    <string name="prompt_fecha_fin">Fecha de finalización</string>
    <string name="title_activity_datos_proyecto">Datos del Proyecto</string>
    <string name="title_activity_crear_tarea">Nueva Tarea</string>
    <string name="title_activity_crear_proyecto">Nuevo Proyecto</string>

    <string name="ver_hitos">Hitos del Proyecto</string>
    <string name="title_activity_lista_hitos">Hitos del Proyecto</string>
    <string name="title_activity_crear_hito">Nuevo Hito</string>
    <string name="title_activity_editar_hito">Editar Hito</string>
    <string name="title_activity_tareas_hito">Tareas del Hito</string>
    <string name="title_activity_comentarios">Comentarios</string>
    <string name="title_activity_nuevo_comentario">Nuevo Comentario</string>
    <string name="prompt_agregar_Comentario">Agregar Comentario</string>
    <string name="prompt_agregar_mensaje">Agregar Mensaje</string>
    <string name="action_modificar_datos">Modificar Datos</string>
    <string name="action_eliminar_proyecto">Eliminar Proyecto</string>

</resources>
