<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="alpha.proyectos.is2.fpuna.py.alpha.activity.EditarProyectoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="64dp"
        tools:context="alpha.proyectos.is2.fpuna.py.alpha.activity.EditarProyectoActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_alignParentBottom="true">

            <!--<Button
                android:id="@+id/ver_hitos_btn"
                style="?android:textAppearanceSmall"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver_hitos"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light"/>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/button_editar"
                    style="?android:textAppearanceSmall"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="8dp"
                    android:layout_width="0dip"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:text="@string/action_modificar_datos"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/background_light"/>

                <Button
                    android:id="@+id/button_eliminar"
                    style="?android:textAppearanceSmall"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="8dp"
                    android:layout_width="0dip"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:text="@string/action_eliminar_proyecto"
                    android:textStyle="bold"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/background_light"/>

            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:id="@+id/login_form"
            android:layout_above="@id/buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_nombre"/>

                    <TextView
                        android:id="@+id/nombre"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_propietario"/>

                    <TextView
                        android:id="@+id/propietario"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_descripcion"/>

                    <TextView
                        android:id="@+id/descripcion"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_estado"/>

                    <TextView
                        android:id="@+id/estado"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_fecha_creacion"/>

                    <TextView
                        android:id="@+id/fechaCreacion"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_fecha_fin"/>

                    <TextView
                        android:id="@+id/fechaFin"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ver_hitos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/titulo"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="Ver Hitos " />

                    <ImageView
                        android:id="@+id/ver_hitos_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_forward_blue"
                        android:tag="fin" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ver_tareas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/titulo"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="Ver tareas " />

                    <ImageView
                        android:id="@+id/ver_tareas_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_forward_blue"
                        android:tag="fin" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
