<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context="alpha.proyectos.is2.fpuna.py.alpha.activity.CrearTareaActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_guardar"
            style="?android:textAppearanceSmall"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:layout_width="0dip"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:text="@string/action_guardar"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"/>

        <Button
            android:id="@+id/button_cancelar"
            style="?android:textAppearanceSmall"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:layout_width="0dip"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:text="@string/action_cancelar"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            android:textColor="@android:color/background_light"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_above="@id/buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_nombre"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:padding="4dp"
                    android:hint="@string/prompt_descripcion"
                    android:inputType="text|textMultiLine"
                    android:background="@drawable/edit_text_background"
                    android:gravity="top" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Proyecto" />

                <Spinner
                    android:id="@+id/proyectos_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Asignado a" />

                <Spinner
                    android:id="@+id/usuarios_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_below="@+id/picDate"
                    android:layout_width="0dip"
                    android:layout_weight="90"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/fechaInicio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_fecha_inicio_estimada"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/picDate"
                    android:layout_width="0dip"
                    android:layout_weight="10"
                    android:layout_marginTop="4dp"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_date"
                    android:tag="inicio"
                    android:onClick="datePicker"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dip"
                    android:layout_weight="90"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/fechaFin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_fecha_fin_estimada"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="0dip"
                    android:layout_weight="10"
                    android:layout_marginTop="4dp"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_date"
                    android:tag="fin"
                    android:onClick="datePicker"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Prioridad" />

                <Spinner
                    android:id="@+id/prioridad_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
